--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Phillip Tennen is an iOS jaibreak developer. I was born in Toronto, Canada but now live in El Paso, Texas. I am 16 years old and my tweaks have netted an estimated 350,000 downloads. Some of my most notable works include Acute, Hermes, CamText, and ClassyLock.">
+    <meta name="description" content="I am an iOS jaibreak developer. I was born in Toronto, Canada but now live in El Paso, Texas. I am 16 years old and my tweaks have netted an estimated 400,000 downloads. Some of my most notable works include Acute, Hermes, CamText, and ClassyLock.">
     <meta name="author" content="Phillip Tennen">
     <link rel="icon" href="./favicon.ico">
 
@@ -85,7 +85,7 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
         <h1>Phillip Tennen</h1>
-        <p>Phillip Tennen is an iOS jaibreak developer. I was born in Toronto, Canada but now live in El Paso, Texas. I am 16 years old and my tweaks have netted an estimated 350,000 downloads. Some of my most notable works include Acute, Hermes, CamText, and ClassyLock.</p>
+        <p>I am an iOS jaibreak developer. I was born in Toronto, Canada but now live in El Paso, Texas. I am 16 years old and my tweaks have netted an estimated 400,000 downloads. Some of my most notable works include Acute, Hermes, CamText, and ClassyLock.</p>
         <p><a href="./Portfolio.html" class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
       </div>
 
@@ -96,17 +96,17 @@
       <div class="row">
         <div class="col-md-4">
           <h2>Programmer</h2>
-          <p>Phillip is highly proficient in Objective-C, having programmed in it for several years. He is also well versed in Swift, HTML5, CSS3, Javascript, Python, and C.</p>
-          <p><a class="btn btn-default" href="#portfolio" role="button">Continue &raquo;</a></p>
+          <p>I am highly proficient in Objective-C, having programmed in it for several years. I am also well versed in Swift, HTML5, CSS3, Javascript, Python, and C.</p>
+          <p><a class="btn btn-default" href="./Portfolio" role="button">Continue &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>Team Friendly</h2>
-          <p>Phillip recently joined the Cortex Dev Team, a team of 6 well known and skilled iOS Jailbreak developers who are working together to create even more amazing tweaks.</p>
+          <p>I recently joined the Cortex Dev Team, a team of 8 well known and skilled iOS Jailbreak developers who are working together to create even more amazing tweaks.</p>
           <p><a class="btn btn-default" href="http://www.cortexdevteam.com" role="button">Continue &raquo;</a></p>
        </div>
         <div class="col-md-4">
           <h2>Productive</h2>
-          <p>To date, Phillip has pushed a total of 37 major software releases, with a combined total of about 175,000 tracked downloads and an estimated total of 350,000 untracked downloads.</p>
+          <p>To date, I've has pushed a total of 49 major software releases, with a combined total of about 175,000 tracked downloads and an estimated total of 400,000 untracked downloads.</p>
           <p><a class="btn btn-default" href="http://apt.thebigboss.org/stats.php?dev=phillipt" role="button">Continue &raquo;</a></p>
         </div>
       </div>
