--- a/Portfolio.html
+++ b/Portfolio.html
@@ -51,7 +51,7 @@
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li><a href="./Home.html">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li class="active"><a href="">Portfolio</a></li>
                 <li><a href="./Contact.html">Contact</a></li>
               </ul>
